Fixed the width of amount boxes on smaller screens in the Converter component.

--- a/app/src/layouts/Converter.css
+++ b/app/src/layouts/Converter.css
@@ -19,7 +19,7 @@
     }
 
     .amount-box {
-        flex: 1 1 0;
+        width: 100%;
         display: grid;
         grid-template-columns: 1fr auto;
         align-items: end;
